hphp/test/slow/no_php/require.php.expectf

Fatal error: PHP support is not enabled: %s/test/slow/no_php/toplevel.php in %s/test/slow/no_php/require.php on line 3
